--- a/reference.bib
+++ b/reference.bib
@@ -215,6 +215,13 @@
   year    = {2020}
 }
 
+@inproceedings{Bai2021,
+  title     = {Unsupervised multi-source domain adaptation for person re-identification},
+  author    = {Bai, Zechen and Wang, Zhigang and Wang, Jian and Hu, Di and Ding, Errui},
+  booktitle = CVPR,
+  year      = {2021}
+}
+
 @article{Bajaj2003,
   author  = {Bajaj, Chandrajit L. and Xu, Guoliang},
   title   = {Anisotropic diffusion of surfaces and functions on surfaces},
@@ -392,6 +399,14 @@
   year      = {2020}
 }
 
+@article{Bugliarello2021,
+  title   = {Multimodal pretraining unmasked: A meta-analysis and a unified framework of vision-and-language {BERT}s},
+  author  = {Bugliarello, Emanuele and Cotterell, Ryan and Okazaki, Naoaki and Elliott, Desmond},
+  journal = {Transactions of the Association for Computational Linguistics},
+  volume  = {9},
+  year    = {2021}
+}
+
 @inproceedings{Burger2012,
   author    = {Burger, H.C. and Schuler, C.J. and Harmeling, S.},
   title     = {Image denoising: Can plain neural networks compete with {BM3D}?},
@@ -486,6 +501,7 @@
   number  = {3}
 }
 
+
 @inproceedings{Chen2014,
   author    = {Chen, Dong and Ren, Shaoqing and Wei, Yichen and Cao, Xudong and Sun, Jian},
   title     = {Joint cascade face detection and alignment},
@@ -517,19 +533,28 @@
   year      = {2019}
 }
 
-@article{Chen2020,
-  title   = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
-  author  = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
-  journal = NIPS,
-  year    = {2020}
+
+@inproceedings{Chen2020,
+  title     = {A simple framework for contrastive learning of visual representations},
+  author    = {Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
+  booktitle = ICML,
+  year      = {2020}
 }
 
 @inproceedings{Chen2020a,
+  title   = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
+  author  = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
+  booktitle = NIPS,
+  year    = {2020}
+}
+
+@inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @article{Cho2014,
   author  = {Cho, Hojin and Lee, Hyunjoon and Kang, Henry and Lee, Seungyong},
@@ -547,7 +572,6 @@
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Choy2019,
   author    = {Choy, Christopher and Gwak, JunYoung and Savarese, Silvio},
@@ -756,6 +780,7 @@
   number  = {6}
 }
 
+
 @article{ElOuafdi2008,
   author  = {El Ouafdi, A.F. and Ziou, D. and Krim, H.},
   title   = {A smart stochastic approach for manifolds smoothing},
@@ -907,6 +932,7 @@
   number  = {3}
 }
 
+
 @book{Goodfellow2016,
   title     = {Deep Learning},
   year      = {2016},
@@ -972,6 +998,7 @@
   volume  = {26},
   number  = {3}
 }
+
 
 @misc{Guennebaud2010,
   author       = {Ga\"{e}l Guennebaud and Beno\^{i}t Jacob and others},
@@ -1732,6 +1759,7 @@
   number  = {5}
 }
 
+
 @inproceedings{Lin2018,
   author       = {Lin, Chen-Hsuan and Kong, Chen and Lucey, Simon},
   title        = {Learning efficient point cloud generation for dense {3D} object reconstruction},
@@ -2424,6 +2452,7 @@
   number  = {3}
 }
 
+
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
   author  = {Sharf, Andrei and Lewiner, Thomas and Shklarski, Gil and Toledo, Sivan and Cohen-Or, Daniel},
@@ -2486,6 +2515,13 @@
   title   = {{DeepPano}: Deep panoramic representation for {3D} shape recognition},
   journal = {IEEE Signal Processing Letters},
   year    = {2015}
+}
+
+@article{Shi2021,
+  title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
+  author  = {Shi, Bowen and Zhang, Xiaopeng and Xu, Haohang and Dai, Wenrui and Zou, Junni and Xiong, Hongkai and Tian, Qi},
+  journal = {arXiv preprint arXiv:2106.04121},
+  year    = {2021}
 }
 
 @article{Shoef2019,
@@ -2577,6 +2613,7 @@
   year      = {2017}
 }
 
+
 @online{Song2019,
   author       = {Shuran Song},
   lassaccessed = {May 20, 2019},
@@ -2591,6 +2628,7 @@
   booktitle = SGPOLD,
   year      = {2004}
 }
+
 
 @article{Srivastava2014,
   author  = {Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
@@ -2759,6 +2797,7 @@
   year      = {1995}
 }
 
+
 @inproceedings{Thomas2019,
   author    = {Hugues Thomas and Charles R. Qi and Jean-Emmanuel Deschaud and Beatriz Marcotegui and Fran\c{c}ois Goulette and Leonidas J. Guibas},
   title     = {{KPConv}: Flexible and deformable convolution for point clouds},
@@ -2915,6 +2954,7 @@
   volume  = {37},
   number  = {6}
 }
+
 
 @article{Wang2018b,
   author  = {Wang, Hao and Schor, Nadav and Hu, Ruizhen and Huang, Haibin and Cohen-Or, Daniel and Huang, Hui},
@@ -3266,6 +3306,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
