--- a/reference.bib
+++ b/reference.bib
@@ -70,6 +70,14 @@
 }
 
 
+@inproceedings{Alayrac2020,
+  title     = {Self-Supervised MultiModal Versatile Networks.},
+  author    = {Alayrac, Jean-Baptiste and Recasens, Adria and Schneider, Rosalia and Arandjelovic, Relja and Ramapuram, Jason and De Fauw, Jeffrey and Smaira, Lucas and Dieleman, Sander and Zisserman, Andrew},
+  booktitle = NIPS,
+  year      = {2020}
+}
+
+
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
   title   = {Detail-replicating shape stretching},
@@ -78,7 +86,6 @@
   volume  = {28},
   number  = {12}
 }
-
 
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
@@ -165,6 +172,7 @@
   year      = {2011}
 }
 
+
 @article{Averkiou2016,
   author  = {Averkiou, Melinos and Kim, Vladimir G. and Mitra, Niloy J.},
   title   = {Autocorrelation Descriptor for Efficient Co-Alignment of 3D Shape Collections},
@@ -173,7 +181,6 @@
   number  = {1},
   year    = {2016}
 }
-
 
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
@@ -197,6 +204,13 @@
   year      = {2016}
 }
 
+@inproceedings{Bai2021,
+  title     = {Unsupervised multi-source domain adaptation for person re-identification},
+  author    = {Bai, Zechen and Wang, Zhigang and Wang, Jian and Hu, Di and Ding, Errui},
+  booktitle = CVPR,
+  year      = {2021}
+}
+
 @article{Bailey2018,
   author  = {Bailey, Stephen W. and Otte, Dave and Dilorenzo, Paul and O'Brien, James F.},
   title   = {Fast and Deep Deformation Approximations},
@@ -213,13 +227,6 @@
   volume  = {39},
   number  = {4},
   year    = {2020}
-}
-
-@inproceedings{Bai2021,
-  title     = {Unsupervised multi-source domain adaptation for person re-identification},
-  author    = {Bai, Zechen and Wang, Zhigang and Wang, Jian and Hu, Di and Ding, Errui},
-  booktitle = CVPR,
-  year      = {2021}
 }
 
 @article{Bajaj2003,
@@ -245,6 +252,7 @@
   year      = {2019}
 }
 
+
 @article{Belongie2002,
   title   = {Shape matching and object recognition using shape contexts},
   author  = {Belongie, Serge and Malik, Jitendra and Puzicha, Jan},
@@ -252,7 +260,6 @@
   number  = {4},
   year    = {2002}
 }
-
 
 @article{Bengio2013,
   author  = {Y. {Bengio} and A. {Courville} and P. {Vincent}},
@@ -282,13 +289,13 @@
   number  = {2}
 }
 
+
 @inproceedings{Bogo2014,
   title     = {{FAUST}: Dataset and evaluation for {3D} mesh registration},
   author    = {Bogo, Federica and Romero, Javier and Loper, Matthew and Black, Michael J},
   booktitle = CVPR,
   year      = {2014}
 }
-
 
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
@@ -492,6 +499,7 @@
   booktitle = CGF
 }
 
+
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
   title   = {A benchmark for {3D} mesh segmentation},
@@ -509,7 +517,6 @@
   year      = {2014}
 }
 
-
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
   title   = {{DeepLab}: Semantic Image Segmentation with Deep Convolutional Nets, Atrous Convolution, and Fully Connected {CRFs}},
@@ -526,13 +533,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
   title     = {{BAE-NET}: Branched autoencoder for shape co-segmentation},
   booktitle = ICCV,
   year      = {2019}
 }
-
 
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
@@ -542,11 +549,12 @@
 }
 
 @inproceedings{Chen2020a,
-  title   = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
-  author  = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
+  title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
+  author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
   booktitle = NIPS,
-  year    = {2020}
+  year      = {2020}
 }
+
 
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
@@ -564,7 +572,6 @@
   volume  = {33},
   number  = {4}
 }
-
 
 @inproceedings{Choy2016,
   author    = {Choy, Christopher B and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
@@ -771,6 +778,7 @@
   number  = {6}
 }
 
+
 @article{Ebke2014,
   author  = {Ebke, Hans-Christian and Campen, Marcel and Bommes, David and Kobbelt, Leif},
   title   = {Level-of-detail quad meshing},
@@ -790,7 +798,6 @@
   number  = {5}
 }
 
-
 @article{Erhan2010,
   author  = {Dumitru Erhan and Yoshua Bengio and Aaron Courville and Pierre-Antoine Manzagol and Pascal Vincent and Samy Bengio},
   title   = {Why does unsupervised pre-training help deep learning?},
@@ -800,6 +807,7 @@
   number  = {19}
 }
 
+
 @article{Fan2010,
   author  = {Hanqi Fan and Yizhou Yu and Qunsheng Peng},
   title   = {Robust feature-preserving mesh denoising based on consistent subneighborhoods},
@@ -808,7 +816,6 @@
   volume  = {16},
   number  = {2}
 }
-
 
 @inproceedings{Fan2017,
   author    = {Fan, Haoqiang and Su, Hao and Guibas, Leonidas},
@@ -923,6 +930,7 @@
   number  = {5}
 }
 
+
 @article{Golovinskiy2009,
   author  = {Aleksey Golovinskiy and Thomas Funkhouser},
   title   = {Consistent segmentation of {3D} models},
@@ -940,9 +948,8 @@
   publisher = {MIT Press}
 }
 
-
 @inproceedings{Goodfellow2016a,
-  author    = {Ian J. Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
+  author    = {Ian Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
   title     = {Generative adversarial networks},
   booktitle = NIPS,
   year      = {2016}
@@ -990,6 +997,7 @@
   year      = {2018}
 }
 
+
 @article{Guennebaud2007,
   author  = {Guennebaud, Ga\"{e}l and Gross, Markus},
   title   = {Algebraic point set surfaces},
@@ -1006,7 +1014,6 @@
   howpublished = {http://eigen.tuxfamily.org},
   year         = {2010}
 }
-
 
 @article{Guerrero2018,
   author  = {Paul Guerrero and Yanir Kleiman and Maks Ovsjanikov and Niloy J. Mitra},
@@ -1158,6 +1165,13 @@
   number  = {12}
 }
 
+@inproceedings{Hazarika2020,
+  title     = {Misa: Modality-invariant and-specific representations for multimodal sentiment analysis},
+  author    = {Hazarika, Devamanyu and Zimmermann, Roger and Poria, Soujanya},
+  booktitle = {ACM International Conference on Multimedia},
+  year      = {2020}
+}
+
 @article{He2013,
   author  = {He, Lei and Schaefer, Scott},
   title   = {Mesh denoising via $L_0$ minimization},
@@ -1209,6 +1223,15 @@
   year    = {2004},
   volume  = {23},
   number  = {3}
+}
+
+@article{Hinton2006,
+  title   = {A fast learning algorithm for deep belief nets},
+  author  = {Hinton, Geoffrey E and Osindero, Simon and Teh, Yee-Whye},
+  journal = {Neural computation},
+  volume  = {18},
+  number  = {7},
+  year    = {2006}
 }
 
 @inproceedings{Hou2021,
@@ -1639,6 +1662,13 @@
   year    = {2017}
 }
 
+@inproceedings{Lambert2020,
+  title     = {{MSeg}: A composite dataset for multi-domain semantic segmentation},
+  author    = {Lambert, John and Liu, Zhuang and Sener, Ozan and Hays, James and Koltun, Vladlen},
+  booktitle = CVPR,
+  year      = {2020}
+}
+
 @article{Landau2015,
   author  = {M. J. Landau and B. Y. Choo and P. A. Beling},
   title   = {Simulating Kinect infrared and depth images},
@@ -1676,6 +1706,7 @@
   editor    = {Jiao, Xiangmin and Weill, Jean-Christophe}
 }
 
+
 @article{Lewiner2010,
   author  = {Lewiner, Thomas and Mello, Vinícius and Peixoto, Adelailson and Pesco, Sinésio and Lopes, Hélio},
   title   = {Fast Generation of Pointerless {Octree} Duals},
@@ -1684,6 +1715,7 @@
   number  = {5},
   year    = {2010}
 }
+
 
 @article{Li2011,
   author  = {Li, Yangyan and Wu, Xiaokun and Chrysathou, Yiorgos and Sharf, Andrei and Cohen-Or, Daniel and Mitra, Niloy J.},
@@ -1711,7 +1743,6 @@
   issn    = {0730-0301}
 }
 
-
 @inproceedings{Li2018,
   title     = {{PointCNN}: Convolution on X-transformed points},
   author    = {Li, Yangyan and Bu, Rui and Sun, Mingchao and Wu, Wei and Di, Xinhan and Chen, Baoquan},
@@ -1719,13 +1750,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
   title     = {{SO-Net}: Self-organizing network for point cloud analysis},
   booktitle = CVPR,
   year      = 2018
 }
+
 
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
@@ -1749,7 +1780,6 @@
   year    = {2021},
   journal = {arXiv preprint arXiv:2111.01353}
 }
-
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
   title   = {Identifying style of {3D} shapes using deep metric learning},
@@ -1758,7 +1788,6 @@
   volume  = {35},
   number  = {5}
 }
-
 
 @inproceedings{Lin2018,
   author       = {Lin, Chen-Hsuan and Kong, Chen and Lucey, Simon},
@@ -1783,6 +1812,7 @@
   booktitle = ECCV,
   year      = {2018}
 }
+
 @inproceedings{Liu2018a,
   title     = {See and think: Disentangling semantic scene completion},
   author    = {Liu, Shice and Hu, Yu and Zeng, Yiming and Tang, Qiankun and Jin, Beibei and Han, Yinhe and Li, Xiaowei},
@@ -1843,6 +1873,13 @@
   title     = {Deep Implicit Moving Least-Squares Functions for {3D} Reconstruction},
   author    = {Liu, Shi-Lin and Guo, Hao-Xiang and Pan, Hao and Wang, Peng-Shuai and Tong, Xin and Liu, Yang},
   booktitle = CVPR,
+  year      = {2021}
+}
+
+@inproceedings{Liu2021c,
+  title     = {Contrastive Multimodal Fusion with {TupleInfoNCE}},
+  author    = {Liu, Yunze and Fan, Qingnan and Zhang, Shanghang and Dong, Hao and Funkhouser, Thomas and Yi, Li},
+  booktitle = ICCV,
   year      = {2021}
 }
 
@@ -2136,12 +2173,14 @@
   year      = {2015}
 }
 
+
 @inproceedings{Pan2021,
   title     = {{3D} Object Detection with {PointFormer}},
   author    = {Pan, Xuran and Xia, Zhuofan and Song, Shiji and Li, Li Erran and Huang, Gao},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @article{Panozzo2013,
   author  = {Daniele Panozzo and Ilya Baran and Olga Diamanti and Olga Sorkine-Hornung},
@@ -2175,14 +2214,12 @@
   number  = {2}
 }
 
-
 @inproceedings{Peng2020,
   title     = {Convolutional occupancy networks},
   author    = {Peng, Songyou and Niemeyer, Michael and Mescheder, Lars and Pollefeys, Marc and Geiger, Andreas},
   booktitle = ECCV,
   year      = {2020}
 }
-
 
 @article{Perez2003,
   author  = {P{\'e}rez, Patrick and Gangnet, Michel and Blake, Andrew},
@@ -2325,6 +2362,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Roufosse2019,
   author    = {Jean-Michel Roufosse and Abhishek Sharma and Maks Ovsjanikov},
   title     = {Unsupervised deep learning for structured shape matching},
@@ -2364,7 +2402,6 @@
   year    = {2015},
   volume  = {13}
 }
-
 
 @inproceedings{Sauder2019,
   author    = {Jonathan Sauder and Bjarne Sievers},
@@ -2410,6 +2447,7 @@
   year      = {2016}
 }
 
+
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
   title   = {An Interactive Approach to Semantic Modeling of Indoor Scenes with an {RGBD} Camera},
@@ -2451,7 +2489,6 @@
   volume  = {23},
   number  = {3}
 }
-
 
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
@@ -2501,6 +2538,7 @@
   number  = {6}
 }
 
+
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
   title   = {A fast multigrid algorithm for mesh deformation},
@@ -2516,6 +2554,7 @@
   journal = {IEEE Signal Processing Letters},
   year    = {2015}
 }
+
 
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
@@ -2539,7 +2578,6 @@
   volume  = {43}
 }
 
-
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
   title   = {Unsupervised co-segmentation of a set of shapes via descriptor-space spectral clustering},
@@ -2555,7 +2593,6 @@
   booktitle = NIPS,
   year      = {2002}
 }
-
 
 @inproceedings{Sinha2016,
   author    = {Ayan Sinha and Jing Bai and Karthik Ramani},
@@ -2578,6 +2615,7 @@
   year    = {2018}
 }
 
+
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
   author    = {Sitzmann, Vincent and Zollh{\"o}fer, Michael and Wetzstein, Gordon},
@@ -2591,6 +2629,7 @@
   booktitle = NIPS,
   year      = {2020}
 }
+
 
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
@@ -2613,7 +2652,6 @@
   year      = {2017}
 }
 
-
 @online{Song2019,
   author       = {Shuran Song},
   lassaccessed = {May 20, 2019},
@@ -2628,7 +2666,6 @@
   booktitle = SGPOLD,
   year      = {2004}
 }
-
 
 @article{Srivastava2014,
   author  = {Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
@@ -2665,6 +2702,14 @@
   title     = {{SPLATNet}: Sparse lattice networks for point cloud processing},
   booktitle = CVPR,
   year      = {2018}
+}
+
+
+@inproceedings{Su2019,
+  title     = {{VL-BERT}: Pre-training of generic visual-linguistic representations},
+  author    = {Su, Weijie and Zhu, Xizhou and Cao, Yue and Li, Bin and Lu, Lewei and Wei, Furu and Dai, Jifeng},
+  booktitle = ICLR,
+  year      = {2020}
 }
 
 @article{Subr2009,
@@ -2713,7 +2758,6 @@
   organization = {Eurographics Association}
 }
 
-
 @inproceedings{Sun2015,
   author    = {Xiao Sun and Yichen Wei and Shuang Liang and Xiaoou Tang and Jian Sun},
   title     = {Cascaded hand pose regression},
@@ -2745,6 +2789,14 @@
   year      = {2021},
   booktitle = CVPR
 }
+
+@article{Tan2019,
+  title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
+  author  = {Tan, Hao and Bansal, Mohit},
+  journal = {arXiv preprint arXiv:1908.07490},
+  year    = {2019}
+}
+
 
 @inproceedings{Tancik2020,
   title     = {Fourier Features Let Networks Learn High Frequency Functions in Low Dimensional Domains},
@@ -2797,12 +2849,19 @@
   year      = {1995}
 }
 
-
 @inproceedings{Thomas2019,
   author    = {Hugues Thomas and Charles R. Qi and Jean-Emmanuel Deschaud and Beatriz Marcotegui and Fran\c{c}ois Goulette and Leonidas J. Guibas},
   title     = {{KPConv}: Flexible and deformable convolution for point clouds},
   booktitle = ICCV,
   year      = 2019
+}
+
+
+@inproceedings{Tian2020,
+  title     = {Contrastive multiview coding},
+  author    = {Tian, Yonglong and Krishnan, Dilip and Isola, Phillip},
+  booktitle = ECCV,
+  year      = {2020}
 }
 
 @inproceedings{Tomasi1998,
@@ -2818,6 +2877,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
@@ -2856,7 +2916,6 @@
   number  = {2}
 }
 
-
 @inproceedings{Vaswani2017,
   author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
   title     = {Attention is all you need},
@@ -2869,6 +2928,13 @@
   author    = {Veli{\v{c}}kovi{\'{c}}, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Li{\`{o}}, Pietro and Bengio, Yoshua},
   booktitle = ICLR,
   year      = {2018}
+}
+
+@inproceedings{Vincent2008,
+  title     = {Extracting and composing robust features with denoising autoencoders},
+  author    = {Vincent, Pascal and Larochelle, Hugo and Bengio, Yoshua and Manzagol, Pierre-Antoine},
+  booktitle = ICML,
+  year      = {2008}
 }
 
 @inproceedings{Wald2019,
@@ -2954,7 +3020,6 @@
   volume  = {37},
   number  = {6}
 }
-
 
 @article{Wang2018b,
   author  = {Wang, Hao and Schor, Nadav and Hu, Ruizhen and Huang, Haibin and Cohen-Or, Daniel and Huang, Hui},
@@ -3131,12 +3196,14 @@
   year      = {2019}
 }
 
+
 @article{Wu2021,
   title   = {Cvt: Introducing convolutions to vision transformers},
   author  = {Wu, Haiping and Xiao, Bin and Codella, Noel and Liu, Mengchen and Dai, Xiyang and Yuan, Lu and Zhang, Lei},
   journal = {arXiv preprint arXiv:2103.15808},
   year    = {2021}
 }
+
 
 @article{Xiao2021,
   title   = {Early convolutions help transformers see better},
@@ -3200,14 +3267,12 @@
   year      = {2018}
 }
 
-
 @inproceedings{Yagou2002,
   author    = {H. Yagou and Y. Ohtake and A. Belyaev},
   title     = {Mesh smoothing via mean and median filtering applied to face normals},
   booktitle = {Geom. Model. and Proc.},
   year      = {2002}
 }
-
 
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
@@ -3237,6 +3302,7 @@
   journal = {arXiv preprint arXiv:2004.10987},
   year    = {2020}
 }
+
 
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
@@ -3307,7 +3373,6 @@
   year      = {2017}
 }
 
-
 @article{Yin2018,
   author  = {Kangxue Yin and Hui Huang and Daniel Cohen-Or and Hao Zhang},
   title   = {{P2P-NET}: Bidirectional Point Displacement Net for Shape Transform},
@@ -3333,12 +3398,14 @@
   number  = {3}
 }
 
+
 @inproceedings{Yu2018,
   author    = {Yu, Lequan and Li, Xianzhi and Fu, Chi-Wing and Cohen-Or, Daniel and Heng, Pheng-Ann},
   title     = {{PU-Net}: Point Cloud Upsampling Network},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
@@ -3368,12 +3435,14 @@
   year      = {2014}
 }
 
+
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
   author    = {Zeng, Andy and Song, Shuran and Nie{\ss}ner, Matthias and Fisher, Matthew and Xiao, Jianxiong and Funkhouser, Thomas},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @article{Zhang2010,
   author  = {Zhang, Hao and Van Kaick, Oliver and Dyer, Ramsay},
@@ -3393,6 +3462,7 @@
   number  = {3}
 }
 
+
 @inproceedings{Zhang2014,
   author    = {Zhang, Qi and Shen, Xiaoyong and Xu, Li and Jia, Jiaya},
   title     = {Rolling guidance filter},
@@ -3409,7 +3479,6 @@
   volume  = {21},
   number  = {7}
 }
-
 
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
@@ -3441,7 +3510,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
   booktitle = threeDV,
@@ -3449,13 +3517,13 @@
   year      = {2019}
 }
 
-
-@article{Zhang2021,
-  title   = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
-  author  = {Zhang, Zaiwei and Girdhar, Rohit and Joulin, Armand and Misra, Ishan},
-  journal = {arXiv:2101.02691},
-  year    = {2021}
+@inproceedings{Zhang2021,
+  title     = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
+  author    = {Zhang, Zaiwei and Girdhar, Rohit and Joulin, Armand and Misra, Ishan},
+  booktitle = ICCV,
+  year      = {2021}
 }
+
 
 @inproceedings{Zhao2019,
   author    = {Zhao, Yongheng and Birdal, Tolga and Deng, Haowen and Tombari, Federico},
@@ -3465,13 +3533,20 @@
 }
 
 
+@inproceedings{Zhao2020,
+  author    = {Xiangyun Zhao and Samuel Schulter and Gaurav Sharma and Yi-Hsuan Tsai and Manmohan Chandraker and Ying Wu},
+  booktitle = ECCV,
+  title     = {Object Detection with a Unified Label Space from Multiple Datasets},
+  year      = {2020}
+}
+
+
 @inproceedings{Zhao2021,
   title     = {Point transformer},
   author    = {Zhao, Hengshuang and Jiang, Li and Jia, Jiaya and Torr, Philip and Koltun, Vladlen},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Zheng2011,
   author  = {Zheng, Youyi and Fu, Hongbo and Au, Oscar Kin-Chung and Tai, Chiew-Lan},
@@ -3488,6 +3563,7 @@
   booktitle = CVPR,
   year      = {2013}
 }
+
 
 @inproceedings{Zhong2020,
   title     = {Reconstructing continuous distributions of {3D} protein structure from cryo-{EM} images},
@@ -3529,6 +3605,12 @@
   eprinttype = {arxiv}
 }
 
+@article{Zhou2021,
+  title   = {Simple multi-dataset detection},
+  author  = {Zhou, Xingyi and Koltun, Vladlen and Kr{\"a}henb{\"u}hl, Philipp},
+  journal = {arXiv preprint arXiv:2102.13086},
+  year    = {2021}
+}
 
 @inproceedings{Zhu2017,
   author    = {Zhu, Rui and Galoogahi, Hamed Kiani and Wang, Chaoyang and Lucey, Simon},
@@ -3544,7 +3626,6 @@
   year      = {2020},
   booktitle = CVPR
 }
-
 
 @inproceedings{Zou2017,
   author    = {Chuhang Zou and Ersin Yumer and Jimei Yang and Duygu Ceylan and Derek Hoiem},
